--- a/react-practice/src/components/Navbar.css
+++ b/react-practice/src/components/Navbar.css
@@ -1,33 +1,43 @@
-/* Navbar.css */
-
-/* Navbar styles */
 .navbar {
-    background-color: white;
-    color: white;
-    padding: 10px;
-  }
+  background-color: rgb(255, 255, 255);
+}
+
 
 .navbar-logo img {
-    width: 200px; /* Set the desired width */
+  width: 500px;
+  max-width: 100%; 
+  height: auto; 
+  display: block; 
+  margin-left: 40px;
 }
-  
-  /* Navbar menu styles */
-  .navbar-menu {
-    list-style: none;
-    display: flex;
-    justify-content: space-around;
-  }
-  
-  .navbar-menu li {
-    margin: 0 10px;
-  }
-  
-  .navbar-menu li a {
-    text-decoration: none;
-    color: black;
-  }
-  
-  .navbar-menu li a:hover {
-    color: yellow;
-  }
-  
+
+.navbar-menu .search-icon img {
+  width: 50px;
+  margin-left: 60px; 
+}
+
+/* Navbar menu styles */
+.navbar-menu {
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+}
+
+.navbar-menu li {
+  margin-top: 25px;
+}
+
+.navbar-menu li:last-child {
+  margin-right: 20px; /* Adjusted margin for the last list item (LOGIN/SIGN UP) */
+}
+
+.navbar-menu li a {
+  margin: 0 50px;
+  font-size: 25px;
+  text-decoration: none;
+  color: black;
+}
+
+.navbar-menu li a:hover {
+  color: rgb(0, 2, 139);
+}
